--- a/DemoProject/DemoProject/Info.plist
+++ b/DemoProject/DemoProject/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -43,5 +45,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleDisplayName</key>
+	<string></string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>So Skynet can become self-aware</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Because. Because. That&apos;s why.</string>
 </dict>
 </plist>
